k8s/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend-deployment
  namespace: tp4-devops
  labels:
    app: backend
spec:
  replicas: 2

  selector:
    matchLabels:
      app: backend

  template:
    metadata:
      labels:
        app: backend

    spec:
      containers:
        - name: backend
          image: DOCKER_IMAGE_PLACEHOLDER
          ports:
            - containerPort: 5000
