k8s/service.yml
apiVersion: v1
kind: Service
metadata:
  name: backend
  namespace: tp4-devops
  labels:
    app: devops-backend-service
spec:
  type: ClusterIP
  selector:
    app: backend
  ports:
    - name: http
      port: 5000
      targetPort: 5000
